<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MOOC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名/邮箱</string>
    <string name="password">密码</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="mailbox">请输入邮箱</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="yes">确定</string>
    <string name="back">返回</string>
    <item type="array" format="integer" name="item">11</item>
    <string-array name="array"></string-array>
    <string name="registerUsername">用户名</string>
    <string name="registerPassword">请输入密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="registerEmail">注册邮箱</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="name_already_exist">用户名已存在</string>
    <string name="account_empty">用户名为空</string>
    <string name="password_empty">密码为空</string>
    <string name="register_ok">可以注册</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">登陆失败</string>
    <string name="no_sd">未找到sd卡</string>
    <string name="sd">sd卡正常</string>
    <string name="play">播放</string>

</resources>
